--- a/css/archive.css
+++ b/css/archive.css
@@ -10,6 +10,14 @@ canvas{
     /* z-index: 1; */
 }
 
+@font-face {
+    font-family: 'Hellplague';
+    src: url('../media/fonts/hellplague.otf') format('otf');
+    
+    font-weight: normal;
+    font-style: normal;
+  
+  }
 
 
 
@@ -69,7 +77,7 @@ color: yellow;
  }
  
  #archive:hover{
-     background-color: fuchsia;
+     background-color: blue;
  }
  
  #blog{
@@ -77,7 +85,7 @@ color: yellow;
  }
  
  #blog:hover{
-     background-color: fuchsia;
+     background-color: blue;
  }
  
  #about{
@@ -85,7 +93,7 @@ color: yellow;
  }
  
  #about:hover{
-    background-color: fuchsia;
+    background-color: blue;
  }
  
 
@@ -110,8 +118,8 @@ color: yellow;
 
 #hello{
     position: absolute;
-    color: red;
-    font-family: "Pinyon Script", sans-serif;
+    color: black;
+    font-family: "Hellplague", san-serif;
     font-style: bold;
     font-weight: 400;
     font-size: 130px;
@@ -187,22 +195,65 @@ color: yellow;
   #square6 {
     width: 80px;
     height: 30px;
-    background: red;
+    background: yellow;
     position: absolute;
     margin-top: 500px;
     margin-right: 900px;
     animation: slidein 4s infinite; 
+    z-index: -1;
 }
 
 #square7 {
     width: 80px;
     height: 30px;
-    background: red;
+    background: yellow;
     position: absolute;
     margin-top: 520px;
-    margin-left: 900px;
-    animation: slidein2 4s infinite; /* Set a duration and use infinite to loop */
+    margin-left: 100px;
+    animation: slidein2 4s infinite; 
+    z-index: -1;
 }
+
+
+#square8 {
+    width: 80px;
+    height: 30px;
+    background: yellow;
+    position: absolute;
+    margin-top: 100px;
+    margin-right: 900px;
+    animation: slidein 4s infinite; 
+    z-index: -1;
+}
+
+#square9 {
+    width: 80px;
+    height: 30px;
+    background: yellow;
+    position: absolute;
+    margin-top: 120px;
+    margin-left: 100px;
+    animation: slidein2 4s infinite; 
+    z-index: -1;
+}
+
+
+#square10 {
+    width: 120px;
+    height: 100px;
+    background: lightpink;
+    position: absolute;
+    margin-top: 120px;
+    margin-left: 800px;
+   animation: fadeIn .5s infinite;
+    z-index: -1;
+}
+
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+  }
 
 
 @keyframes blink {
@@ -228,22 +279,23 @@ color: yellow;
 
 
 h2{
-    color: red;
-    font-family: "Pinyon Script", san-serif;
-    font-size: 64px;
+    color: black;
+    font-family: "pinyon script", san-serif;
+    font-size: 44px;
     display: flex;
     justify-content: center;
-   
     margin-right: auto;
     position: absolute;
+    margin-top:70px;
+    z-index: 1;
     
   
 
 }
 
 h3{
-    color: red;
-    font-family: "Pinyon Script", serif;
+    color: black;
+    font-family: "hellplague", san-serif;
     font-size: 24px;
     display: flex;
     justify-content: center;
