--- a/css/about.css
+++ b/css/about.css
@@ -103,6 +103,7 @@ a:hover{
     flex-wrap: wrap;
     height: 100%;
     flex-direction: row;
+    width: 100%;
     
 }
 
@@ -125,13 +126,23 @@ a:hover{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    height: auto;
-    width: 90%;
+    height: 100vh;
+    width: 30%;
+   
   
 }
 
 
-
+.flex-container2 {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 60%;
+ 
+  
+}
 
 
 
@@ -188,6 +199,7 @@ header{
     font-family: 'zaltys', sans-serif;
     font-size: 80px;
     letter-spacing: 30px;
+    z-index: -1;
 }
 
 .scrollbar {
