--- a/css/blog.css
+++ b/css/blog.css
@@ -1,18 +1,17 @@
-/* CSS Reset */
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box; /* Ensures padding and borders are included in width/height */
 }
 
 canvas{
     display: block;
 }
 
-
-style{
+style {
     object-fit: cover;
 }
+
 
 @font-face {
     font-family: 'kupole';
@@ -42,13 +41,16 @@ style{
   }
 
 
-#three-body{
+  html, body {
+    width: 100%;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+}
+
+#three-body {
     width: 100%;
     height: 90%;
     margin: 0 auto;
-    /* z-index: 1; */
 }
-
 
 
 a{
@@ -137,9 +139,10 @@ p{
 .parent-container {
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
+    height: auto;
     flex-direction: row;
     color: #FFB6C1;
+    width: 100%;
     
 }
 
@@ -396,10 +399,10 @@ p{
 
 @keyframes changeBackgroundColor {
 0% {
-    background-color: rgb(255, 0, 106);
+    background-color: yellow;
 }
 50% {
-    background-color: rgb(17, 255, 219);
+    background-color: hotpink;
 }
 100% {
     background-color: rgb(175, 255, 4);
@@ -411,17 +414,6 @@ p{
 
 
 
-@keyframes changeBackgroundColor {
-0% {
-    background-color: rgb(182, 46, 128);
-}
-50% {
-    background-color: rgb(86, 185, 232);
-}
-100% {
-    background-color: rgb(172, 192, 26);
-}
-}
 
 .bg-anim {
 animation: changeBackgroundColor 3s infinite;
